# 2025H-420-930-MA-Revision-Final

./: README.md  main_Soluce.py  pyproject.toml
app/: README.md  main.py  models.py  strategies.py
src/revision/: __init__.py  calculateurPrix.py  client.py  fabrique.py  main.py  produit.py  solution.py  strategiePointsFidelite.py  strategieRemise.py
