[project]
name = "revision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent Archambault-Bouffard", email = "varchambaultbouffard@cmaisonneuve.qc.ca" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
main = "revision:main"
solution = "revision:solution"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
